--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
         <div class="card">
-            <img src="/assets/img/jazz.png" alt="face da carta" class="card-front">
+            <img src="/assets/img/celtics.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
         <div class="card">
@@ -42,7 +42,7 @@
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
         <div class="card">
-            <img src="/assets/img/jazz.png" alt="face da carta" class="card-front">
+            <img src="/assets/img/celtics.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
         <div class="card">
