--- a/index.html
+++ b/index.html
@@ -9,51 +9,51 @@
 </head>
 <body>
     <main class="memory-game">
-        <div class="card">
+        <div class="card" data-card="bkn">
             <img src="/assets/img/bkn.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="golden-state-warriors">
             <img src="/assets/img/golden-state-warriors.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="celtics">
             <img src="/assets/img/celtics.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="los-angeles-clippers">
             <img src="/assets/img/los-angeles-clippers.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="los-angeles-lakers">
             <img src="/assets/img/los-angeles-lakers.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="min">
             <img src="/assets/img/min.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="bkn">
             <img src="/assets/img/bkn.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="golden-state-warriors">
             <img src="/assets/img/golden-state-warriors.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="celtics">
             <img src="/assets/img/celtics.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="los-angeles-clippers">
             <img src="/assets/img/los-angeles-clippers.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="los-angeles-lakers">
             <img src="/assets/img/los-angeles-lakers.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
-        <div class="card">
+        <div class="card" data-card="min">
             <img src="/assets/img/min.png" alt="face da carta" class="card-front">
             <img src="/assets/img/nba.png" alt="verso da carta" class="card-back">
         </div>
